Fix gap in the calendar component title

--- a/src/app/expense-form/expense-form.component.css
+++ b/src/app/expense-form/expense-form.component.css
@@ -41,3 +41,7 @@
 ::ng-deep .expense-form .p-inputtext:enabled:focus, ::ng-deep .expense-form .p-component.p-dropdown {
     box-shadow: none;
 }
+
+::ng-deep .expense-form .p-datepicker-title {
+    @apply flex gap-2
+}
